# git-active-days

./: LICENSE  README.md  pyproject.toml
src/git_active_days/: main.py
