
[project]
name = "git-active-days"
version = "0.1.0"
description = "Estimate active working time on a project by analyzing git commit history"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Habib Affinnih", email = "hi@haffinnih.dev" }]

dependencies = [
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[dependency-groups]
dev = ["ruff>=0.15.5"]

[project.urls]
Repository = "https://github.com/haffinnih/git-active-days"

[project.scripts]
git-active-days = "git_active_days.main:app"

[build-system]
requires = ["uv_build>=0.10,<0.11"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
